--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
- 
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.30.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
